--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
               <a
                 href="https://news.ycombinator.com/item?id={{ story.id }}"
                 target="_blank"
-                >{{ story.title }}</a
+                >{{ story.title }}.</a
               >
             </h2>
           </div>
