--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,6 +30,8 @@ p,
   width: 90%;
   height: 90%;
   box-shadow: 0px 0px 20px 0px hsl(34 50% 30%);
+  border-bottom-left-radius: 25px;
+  border-top-right-radius: 25px;
 }
 
 /* **** HEADER  **** */
