blur animation on logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
   <main>
     <div class="wrapper__hackerNews">
       <div class="articles__header">
-        <h1>Hacker News.</h1>
+        <h1>Hacker News <span>Top 10.</span></h1>
       </div>
       <div class="articles">
         <div
