--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,6 +34,12 @@ p,
   border-top-right-radius: 25px;
 }
 
+.header__snippet,
+.header__date,
+.articles__header {
+  animation: fadeinSlideup 1s;
+}
+
 /* **** HEADER  **** */
 
 .header {
@@ -137,7 +143,6 @@ main {
   top: -120px;
   left: 10px;
   font-size: 3rem;
-  animation: fadeinSlideup 1s;
   span {
     font-size: 1.2rem;
   }
