--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
       </div>
       <div class="header__logo">
         <div class="header__img">
-          <img src="../assets/img/logo/logo.svg" alt="" />
+          <!-- <img src="../assets/img/logo/logo.svg" alt="" /> -->
+          <h1><span>il</span> Resto <span>del</span> Nerdino</h1>
         </div>
       </div>
       <div class="header__date">
@@ -25,9 +26,20 @@
     <div class="slider">
       <div class="slider__top"></div>
       <div class="slider__content">
-        <p>test</p>
-        <p>another test</p>
-        <p>another test number 2</p>
+        <div class="slide">Prova 1</div>
+        <div class="slide">Prova 2</div>
+        <div class="slide">Prova 3</div>
+        <div class="slide">Prova 4</div>
+        <div class="slide">Prova 5</div>
+        <div class="slide">Prova 6</div>
+        <div class="slide">Prova 7</div>
+        <div class="slide">Prova 1</div>
+        <div class="slide">Prova 2</div>
+        <div class="slide">Prova 3</div>
+        <div class="slide">Prova 4</div>
+        <div class="slide">Prova 5</div>
+        <div class="slide">Prova 6</div>
+        <div class="slide">Prova 7</div>
       </div>
       <div class="slider__bottom"></div>
     </div>
