--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,6 +32,7 @@ p,
   box-shadow: 0px 0px 20px 0px hsl(34 50% 30%);
   border-bottom-left-radius: 25px;
   border-top-right-radius: 25px;
+  transition: all 0.2s ease-in-out;
 }
 
 .header__snippet,
@@ -97,6 +98,7 @@ p,
     text-align: center;
     font-size: 7rem;
     letter-spacing: -0.25rem;
+    line-height: 4rem;
     span {
       display: inline-block;
       margin-inline: -1.1rem;
@@ -306,6 +308,63 @@ main {
 
 @media screen and (max-width: 1920px) {
   .article {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .wrapper {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+
+  .header__logo {
+    width: 100%;
+  }
+  .header__img {
+    h1 {
+      font-size: 4rem;
+      span {
+        font-size: 1.5rem;
+        margin-inline: -0.5rem;
+      }
+    }
+  }
+  .header__snippet {
+    display: none;
+  }
+  .header__date {
+    display: none;
+  }
+
+  .articles {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 12rem);
+    grid-gap: 0.125rem;
+    grid-template-areas:
+      "a b"
+      "c d"
+      "e f"
+      "g h"
+      "i j";
+  }
+
+  .articles__header {
+    font-size: 1.5rem;
+    top: -4rem;
+    left: 0.6rem;
+    letter-spacing: -0.2rem;
+    span {
+      font-size: 1rem;
+    }
+  }
+
+  .article {
+    font-size: 0.6rem;
+  }
+
+  .articles__options {
     font-size: 0.8rem;
   }
 }
