fixed line height on header logo

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -325,6 +325,7 @@ main {
   .header__img {
     h1 {
       font-size: 4rem;
+      line-height: 2.2rem;
       span {
         font-size: 1.5rem;
         margin-inline: -0.5rem;
