fixed slider and adjusted font on articles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,11 @@
         <div class="slide">Prova 5</div>
         <div class="slide">Prova 6</div>
         <div class="slide">Prova 7</div>
+        <div class="slide">Prova 8</div>
+        <div class="slide">Prova 9</div>
+        <div class="slide">Prova 10</div>
+        <div class="slide">Prova 11</div>
+        <div class="slide">Prova 12</div>
         <div class="slide">Prova 1</div>
         <div class="slide">Prova 2</div>
         <div class="slide">Prova 3</div>
@@ -40,6 +45,11 @@
         <div class="slide">Prova 5</div>
         <div class="slide">Prova 6</div>
         <div class="slide">Prova 7</div>
+        <div class="slide">Prova 8</div>
+        <div class="slide">Prova 9</div>
+        <div class="slide">Prova 10</div>
+        <div class="slide">Prova 11</div>
+        <div class="slide">Prova 12</div>
       </div>
       <div class="slider__bottom"></div>
     </div>
