--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -171,6 +171,7 @@ main {
   left: 0.8rem;
   font-size: 2.5rem;
   letter-spacing: -0.3rem;
+  transition: all 0.2s ease-in-out;
   span {
     font-size: 1.2rem;
     letter-spacing: 0rem;
