added animation on header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -99,6 +99,7 @@ p,
     font-size: 7rem;
     letter-spacing: -0.25rem;
     line-height: 4rem;
+    transition: 0.2s all ease-in-out;
     span {
       display: inline-block;
       margin-inline: -1.1rem;
