--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,13 +26,24 @@ p,
 
 .wrapper {
   @include centerAbsolute;
+  position: relative;
   outline: 2px solid black;
+  overflow: scroll;
   width: 90%;
   height: 90%;
   box-shadow: 0px 0px 20px 0px hsl(34 50% 30%);
   border-bottom-left-radius: 25px;
   border-top-right-radius: 25px;
   transition: all 0.2s ease-in-out;
+  // &::after {
+  //   content: "";
+  //   position: fixed;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   box-shadow: inset 0 0 10px black;
+  // }
 }
 
 .header__snippet,
