changed inline padding to logo on smaller screen

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -371,7 +371,7 @@ main {
 
   .header__logo {
     width: 100%;
-    // padding-inline: 3rem;
+    padding-inline: 3rem;
   }
   .header__img {
     h1 {
