padding-inline on articles on smaller screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -403,6 +403,10 @@ main {
     font-size: 0.8rem;
   }
 
+  .article {
+    padding-inline: 1rem;
+  }
+
   .articles__header {
     font-size: 1.5rem;
     top: -4rem;
