--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,9 +37,9 @@ p,
   -moz-box-shadow: 
   // inset 0px 40px 50px -30px rgb(0, 0, 0),
     0px 0px 20px 0px hsl(34 50% 30%);
-  -webkit-box-shadow: 
+  // -webkit-box-shadow:
   // inset 0px 40px 50px -30px rgb(0, 0, 0),
-    0px 0px 20px 0px hsl(34 50% 30%);
+  //   0px 0px 20px 0px hsl(34 50% 30%);
   border-bottom-left-radius: 25px;
   border-top-right-radius: 25px;
   transition: all 0.2s ease-in-out;
