--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,7 +26,7 @@ p,
 
 .wrapper {
   @include centerAbsolute;
-  position: relative;
+  // position: relative;
   outline: 2px solid black;
   // overflow-y: scroll;
   width: 90%;
