two way data binding for subreddits

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,13 +96,8 @@
         </div>
       </div>
     </div>
-    <div class="wrapper__reddit">
-      <input
-        type="text"
-        [(ngModel)]="subreddit"
-        (keydown)="onKeydown($event)"
-      />
-    </div>
+    <div class="wrapper__reddit"></div>
   </main>
   <footer></footer>
 </div>
+<input type="text" [(ngModel)]="subreddit" (keydown)="onKeydown($event)" />
