overflow scroll on wrapper

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,4 +100,4 @@
   </main>
   <footer></footer>
 </div>
-<input type="text" [(ngModel)]="subreddit" (keydown)="onKeydown($event)" />
+<!-- <input type="text" [(ngModel)]="subreddit" (keydown)="onKeydown($event)" /> -->
