--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,7 +28,7 @@ p,
   @include centerAbsolute;
   // position: relative;
   outline: 2px solid black;
-  // overflow-y: scroll;
+  overflow-y: scroll;
   width: 90%;
   height: 90%;
   box-shadow: 
